* migrate .zsh to .dots so it can ideally be agnostic to shells (or at least appear so) * fix .gitignore which was matching against all names and was painful to work. It now works against all directories and files in the top level directory first and then we can re-include easier from there

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 # ignore everything
-*
+/*
 
 # include .gitignore
 !.gitignore
 
-# include .zsh
-!*.zsh
-!*.zsh/personal/*
+# include personal .dots
+!*.dots
+!*.dots/personal/*
 !.zshrc
 
 # include .config
-!.config
 !*.config/oh-my-posh
 !*.config/oh-my-posh/*
 !*.config/ghostty
